--- a/src/app/customer/customer-detail/customer-detail.component.html
+++ b/src/app/customer/customer-detail/customer-detail.component.html
@@ -2,7 +2,7 @@
   <span>Customer details</span>
 </mat-toolbar>
 
-<div class="flex m-8" *ngIf="customers">
+<div class="flex m-8 w-1/3" *ngIf="customers">
 
 <ul>
   <li>
